@@ -5,6 +5,7 @@ import hnp.selenium.chromedriver.dto.User;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -14,6 +15,6 @@ public class UserService {
         //do stuffs
         //dump user data
         User user = new User(loginForm.getUsername(), loginForm.getPassword(), "email@javabycode.com");
-        return new ArrayList<>(List.of(user));
+        return new ArrayList<>(Collections.singletonList(user));
     }
 }
